--- a/labs/lab2/index.html
+++ b/labs/lab2/index.html
@@ -8,6 +8,9 @@
 <body>
     <h1>Hello!</h1>
     Welcome to my website!
+
+    <img src="./ccs.jpg" alt="CosmodiumCS">
+
     <div>
         <h2>Counter: <span id="counterDisplay">0</span></h2>
         <button onclick="increaseCounter()">Increase</button>
